--- a/index.html
+++ b/index.html
@@ -54,34 +54,34 @@
     <!-- Topbar End -->
 
 
-    <!-- Navbar Start -->
-    <div class="container-fluid position-relative nav-bar p-0">
-        <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
-                <a href="index.html" class="navbar-brand d-block d-lg-none">
+   <!-- Navbar Start -->
+   <div class="container-fluid position-relative nav-bar p-0">
+    <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
+            <a href="index.html" class="navbar-brand d-block d-lg-none">
+                <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">Cookie </span>sweet</h1>
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <div class="navbar-nav ml-auto py-0">
+                    <a href="index.html" class="nav-item nav-link">Inicio</a>
+                    <a href="about.html" class="nav-item nav-link">Acerca de</a>
+                    <a href="product.html" class="nav-item nav-link active">Productos</a>
+                </div>
+                <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
                     <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">Cookie </span>sweet</h1>
                 </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="product.html" class="nav-item nav-link">Product</a>
-                    </div>
-                    <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cookie </span>sweet</h1>
-                    </a>
-                    <div class="navbar-nav mr-auto py-0">
-                        <a href="service.html" class="nav-item nav-link">Service</a>
-                        <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                    </div>
+                <div class="navbar-nav mr-auto py-0">
+                    <a href="service.html" class="nav-item nav-link">Servicios</a>
+                    <a href="gallery.html" class="nav-item nav-link">Galleria</a>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </div>
-    <!-- Navbar End -->
+</div>
+<!-- Navbar End -->
 
 
     <!-- Carousel Start -->
@@ -179,7 +179,7 @@
                     </div>
                     <h3 class="font-weight-bold text-white mt-3 mb-4">box cokiee surtidas</h3>
                     <p class="text-white mb-4">caja galletas de oreo,chocochips,nutella y hotcookie</p>
-                    <a href="" class="btn btn-secondary py-3 px-5 mt-2">Order Now</a>
+                    <a href="qr.html" class="btn btn-secondary py-3 px-5 mt-2">Ordenar</a>
                 </div>
             </div>
         </div>
@@ -328,7 +328,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="section-title position-relative mb-5">Best Prices We Offer For Ice Cream Lovers</h1>
+                    <h1 class="section-title position-relative mb-5">Los mejores precios que ofrecemos para los amantes de los postres</h1>
                 </div>
                 <div class="col-lg-6 mb-5 mb-lg-0 pb-5 pb-lg-0"></div>
             </div>
@@ -342,7 +342,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-1.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Galleta de chocolate</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -354,7 +354,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-2.jpeg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Galleta Red velvet</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -366,7 +366,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-3.jpeg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Galleta de frutos</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -378,7 +378,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-4.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Crookie</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -390,7 +390,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-5.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Postre Tres leche</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -402,7 +402,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-6.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Brownie con oreo</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -414,7 +414,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-7.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Brownie con arequipe</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
@@ -426,7 +426,7 @@
                             <img class="rounded-circle w-100 h-100" src="imgg/producto-8.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Galleta de limon</h5>
-                        <a href="" class="btn btn-sm btn-secondary">Ordenar</a>
+                        <a href="product.html" class="btn btn-sm btn-secondary">Mas informacion</a>
                     </div>
                 </div>
                 
