--- a/service.html
+++ b/service.html
@@ -65,16 +65,16 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="product.html" class="nav-item nav-link">Product</a>
+                        <a href="index.html" class="nav-item nav-link">Inicio</a>
+                        <a href="about.html" class="nav-item nav-link">Acerca de</a>
+                        <a href="product.html" class="nav-item nav-link active">Productos</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Cookie </span>sweet</h1>
+                        <h1 class="m-0 mt-n2 display-4 text-primary"><span class="text-secondary">Cookie </span>sweet</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="service.html" class="nav-item nav-link active">Service</a>
-                        <a href="gallery.html" class="nav-item nav-link">Gallery</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios</a>
+                        <a href="gallery.html" class="nav-item nav-link">Galleria</a>
                     </div>
                 </div>
             </nav>
